tests/rosetta/transpiler/CS/church-numerals-2.error
dotnet run: exit status 1
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(70,64): error CS1661: Cannot convert lambda expression to type 'Func<object, object>' because the parameter types do not match the delegate parameter types [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(70,61): error CS1678: Parameter 1 is declared as type 'System.Func<object, object>' but should be 'object' [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(78,64): error CS1661: Cannot convert lambda expression to type 'Func<object, object>' because the parameter types do not match the delegate parameter types [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(78,61): error CS1678: Parameter 1 is declared as type 'System.Func<object, object>' but should be 'object' [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(82,64): error CS1661: Cannot convert lambda expression to type 'Func<object, object>' because the parameter types do not match the delegate parameter types [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(82,61): error CS1678: Parameter 1 is declared as type 'System.Func<object, object>' but should be 'object' [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(90,16): error CS0266: Cannot implicitly convert type 'object' to 'System.Func<object, object>'. An explicit conversion exists (are you missing a cast?) [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(97,9): error CS0149: Method name expected [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/Program.cs(105,9): error CS0149: Method name expected [/tmp/TestCSTranspiler_Rosetta_Golden4229012465/001/app.csproj]

The build failed. Fix the build errors and run again.
